--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>info.bliki.wiki</groupId>
       <artifactId>bliki-core</artifactId>
-      <version>3.0.16</version>
+      <version>3.0.19</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -45,6 +45,12 @@
       <groupId>org.apache.opennlp</groupId>
       <artifactId>opennlp-tools</artifactId>
       <version>1.5.1-incubating</version>
+      <exclusions>
+        <exclusion>
+          <groupId>jwnl</groupId>
+          <artifactId>jwnl</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
         <groupId>org.apache.lucene</groupId>
